cmake_minimum_required(VERSION 3.9)
project(Assignment12)

set(CMAKE_CXX_STANDARD 11)

add_executable(Assignment12 main.cpp DataAllZeros.cpp DataAllZeros.h DataGenerator.cpp DataGenerator.h DataRandom.cpp DataRandom.h DataReverseSorted.cpp DataReverseSorted.h DataSorted.cpp DataSorted.h Element.cpp Element.h InsertionSort.cpp InsertionSort.h LinkedList.cpp LinkedList.h MergeSort.cpp MergeSort.h Node.cpp Node.h QuickSortOptimal.cpp QuickSortOptimal.h QuickSortSuboptimal.cpp QuickSortSuboptimal.h QuickSorter.cpp QuickSorter.h ShellSortOptimal.cpp ShellSortOptimal.h ShellSortSuboptimal.cpp ShellSortSuboptimal.h ListSorter.cpp ListSorter.h SelectionSort.cpp SelectionSort.h Sorter.cpp Sorter.h VectorSorter.cpp VectorSorter.h)